nbproject/private/Default-build.log
g++ -c -w -std=c++11 main.cpp -o main.o
main.cpp:184:26: error: invalid operands to binary expression ('std::__1::ifstream' (aka 'basic_ifstream<char>') and 'long')
            if(unitigFile==NULL){
               ~~~~~~~~~~^ ~~~~
/Library/Developer/CommandLineTools/usr/include/c++/v1/system_error:391:1: note: candidate function not viable: no known conversion from 'std::__1::ifstream' (aka 'basic_ifstream<char>') to 'const std::__1::error_code' for 1st argument
operator==(const error_code& __x, const error_code& __y) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/system_error:398:1: note: candidate function not viable: no known conversion from 'std::__1::ifstream' (aka 'basic_ifstream<char>') to 'const std::__1::error_code' for 1st argument
operator==(const error_code& __x, const error_condition& __y) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/system_error:406:1: note: candidate function not viable: no known conversion from 'std::__1::ifstream' (aka 'basic_ifstream<char>') to 'const std::__1::error_condition' for 1st argument
operator==(const error_condition& __x, const error_code& __y) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/system_error:413:1: note: candidate function not viable: no known conversion from 'std::__1::ifstream' (aka 'basic_ifstream<char>') to 'const std::__1::error_condition' for 1st argument
operator==(const error_condition& __x, const error_condition& __y) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/utility:578:1: note: candidate template ignored: could not match 'pair' against 'basic_ifstream'
operator==(const pair<_T1,_T2>& __x, const pair<_T1,_T2>& __y)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:694:1: note: candidate template ignored: could not match 'reverse_iterator' against 'basic_ifstream'
operator==(const reverse_iterator<_Iter1>& __x, const reverse_iterator<_Iter2>& __y)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:923:1: note: candidate template ignored: could not match 'istream_iterator' against 'basic_ifstream'
operator==(const istream_iterator<_Tp, _CharT, _Traits, _Distance>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:1027:6: note: candidate template ignored: could not match 'istreambuf_iterator' against 'basic_ifstream'
bool operator==(const istreambuf_iterator<_CharT,_Traits>& __a,
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:1135:1: note: candidate template ignored: could not match 'move_iterator' against 'basic_ifstream'
operator==(const move_iterator<_Iter1>& __x, const move_iterator<_Iter2>& __y)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/iterator:1433:5: note: candidate template ignored: could not match '__wrap_iter' against 'basic_ifstream'
    operator==(const __wrap_iter<_Iter1>&, const __wrap_iter<_Iter2>&) _NOEXCEPT_DEBUG;
    ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/tuple:1139:1: note: candidate template ignored: could not match 'tuple' against 'basic_ifstream'
operator==(const tuple<_Tp...>& __x, const tuple<_Up...>& __y)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:1986:6: note: candidate template ignored: could not match 'allocator' against 'basic_ifstream'
bool operator==(const allocator<_Tp>&, const allocator<_Up>&) _NOEXCEPT {return true;}
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:2960:1: note: candidate template ignored: could not match 'unique_ptr' against 'basic_ifstream'
operator==(const unique_ptr<_T1, _D1>& __x, const unique_ptr<_T2, _D2>& __y) {return __x.get() == __y.get();}
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:2996:1: note: candidate template ignored: could not match 'unique_ptr' against 'basic_ifstream'
operator==(const unique_ptr<_T1, _D1>& __x, nullptr_t) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:3004:1: note: candidate template ignored: could not match 'unique_ptr<type-parameter-0-0, type-parameter-0-1>' against 'long'
operator==(nullptr_t, const unique_ptr<_T1, _D1>& __x) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:4792:1: note: candidate template ignored: could not match 'shared_ptr' against 'basic_ifstream'
operator==(const shared_ptr<_Tp>& __x, const shared_ptr<_Up>& __y) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:4846:1: note: candidate template ignored: could not match 'shared_ptr' against 'basic_ifstream'
operator==(const shared_ptr<_Tp>& __x, nullptr_t) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/memory:4854:1: note: candidate template ignored: could not match 'shared_ptr<type-parameter-0-0>' against 'long'
operator==(nullptr_t, const shared_ptr<_Tp>& __x) _NOEXCEPT
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/functional:1952:1: note: candidate template ignored: could not match 'function' against 'basic_ifstream'
operator==(const function<_Rp(_ArgTypes...)>& __f, nullptr_t) _NOEXCEPT {return !__f;}
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/functional:1957:1: note: candidate template ignored: could not match 'function<type-parameter-0-0 (type-parameter-0-1...)>' against 'long'
operator==(nullptr_t, const function<_Rp(_ArgTypes...)>& __f) _NOEXCEPT {return !__f;}
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string_view:613:6: note: candidate template ignored: could not match 'basic_string_view' against 'basic_ifstream'
bool operator==(basic_string_view<_CharT, _Traits> __lhs,
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string_view:622:6: note: candidate template ignored: could not match 'basic_string_view' against 'basic_ifstream'
bool operator==(basic_string_view<_CharT, _Traits> __lhs,
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string_view:631:6: note: candidate template ignored: could not match 'basic_string_view<type-parameter-0-0, type-parameter-0-1>' against 'long'
bool operator==(typename common_type<basic_string_view<_CharT, _Traits> >::type __lhs, 
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:558:6: note: candidate template ignored: could not match 'fpos' against 'basic_ifstream'
bool operator==(const fpos<_StateT>& __x, const fpos<_StateT>& __y)
     ^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:3792:1: note: candidate template ignored: could not match 'basic_string' against 'basic_ifstream'
operator==(const basic_string<_CharT, _Traits, _Allocator>& __lhs,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:3804:1: note: candidate template ignored: could not match 'basic_string' against 'basic_ifstream'
operator==(const basic_string<char, char_traits<char>, _Allocator>& __lhs,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:3823:1: note: candidate template ignored: could not match 'const _CharT *' against 'std::__1::ifstream' (aka 'basic_ifstream<char>')
operator==(const _CharT* __lhs,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/string:3836:1: note: candidate template ignored: could not match 'basic_string' against 'basic_ifstream'
operator==(const basic_string<_CharT,_Traits,_Allocator>& __lhs,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/vector:3340:1: note: candidate template ignored: could not match 'vector' against 'basic_ifstream'
operator==(const vector<_Tp, _Allocator>& __x, const vector<_Tp, _Allocator>& __y)
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/unordered_set:879:1: note: candidate template ignored: could not match 'unordered_set' against 'basic_ifstream'
operator==(const unordered_set<_Value, _Hash, _Pred, _Alloc>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/unordered_set:1404:1: note: candidate template ignored: could not match 'unordered_multiset' against 'basic_ifstream'
operator==(const unordered_multiset<_Value, _Hash, _Pred, _Alloc>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/map:1500:1: note: candidate template ignored: could not match 'map' against 'basic_ifstream'
operator==(const map<_Key, _Tp, _Compare, _Allocator>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/map:2000:1: note: candidate template ignored: could not match 'multimap' against 'basic_ifstream'
operator==(const multimap<_Key, _Tp, _Compare, _Allocator>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/set:794:1: note: candidate template ignored: could not match 'set' against 'basic_ifstream'
operator==(const set<_Key, _Compare, _Allocator>& __x,
^
/Library/Developer/CommandLineTools/usr/include/c++/v1/set:1238:1: note: candidate template ignored: could not match 'multiset' against 'basic_ifstream'
operator==(const multiset<_Key, _Compare, _Allocator>& __x,
^
1 error generated.
make: *** [main.o] Error 1
